@@ -1,3 +1,5 @@
+2006/6/27 -- released version 20060627_trunk
+
 2006/6/26 -- released version 20060626_trunk
 
 2006/6/25 -- released version 20060625_trunk
